Fix missing variable causing sizes to break on mobile

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -1,6 +1,6 @@
-@use '_colors.scss';
-@use '_syntax.scss';
-@use '_prose.scss';
+@use "_colors.scss";
+@use "_syntax.scss";
+@use "_prose.scss";
 
 @font-face {
   font-family: "JetBrainsMono";
@@ -56,7 +56,7 @@ main {
   gap: var(--grid-gap);
   translate: calc(((var(--sidebar-width) + var(--grid-gap)) / 2) * -1) 0;
 
-  @media screen and (max-width: toc-hide), print {
+  @media screen and (max-width: $toc-hide), print {
     grid-template-areas:
       "navigation"
       "content"
@@ -74,7 +74,7 @@ main {
 #toc {
   grid-area: sidebar;
 
-  @media screen and (max-width: toc-hide), print {
+  @media screen and (max-width: $toc-hide), print {
     display: none;
   }
 }
